--- a/Star Wars/Css/body.css
+++ b/Star Wars/Css/body.css
@@ -16,5 +16,6 @@ body{
     background-position-x: 50px;
     background-position-y: 0;
     color: var(--FontColor);
-    
+    display: flex;
+    justify-content: center;
 }
