--- a/Star Wars/Css/Form.css
+++ b/Star Wars/Css/Form.css
@@ -54,9 +54,9 @@ section article form div input{
     font-size: 1.1em;
     transition: .1s linear;
 }
-section article form div input:focus{
-    border-bottom: 2px solid #f00;
-    border-right: 2px solid #f00;
+section article form div input:hover{
+    border-bottom: 2px solid var(--HoverColor);
+    border-right: 2px solid var(--HoverColor);
 }
 section article form div input::placeholder{
     color: var(--FontColor);
