--- a/Star Wars/Css/Form.css
+++ b/Star Wars/Css/Form.css
@@ -11,8 +11,8 @@ section article{
     border: 2px solid #aaa;
     box-shadow: 0px 0px 5px var(--SecondaryColor);
     border-radius: 15px;
-    height: 340px;
-    width: 80%;
+    height: 355px;
+    width: 90%;
     display: flex;
     justify-content: center;
     padding: 15px;
@@ -44,7 +44,7 @@ section article form div label{
 }
 section article form div input{
     padding: 5px 7px;
-    width: 285px;
+    width: 320px;
     border: none;
     outline: none;
     background-color: transparent;
@@ -64,9 +64,10 @@ section article form div input::placeholder{
 }
 section article form div button{
     padding: 6px 2px;
-    margin: 2px 15px 3px 15px;
+    margin: 5px 5px 3px 5px;
     font-size: 1.2em;
-    letter-spacing: 1px;
+    font-weight: 600;
+    letter-spacing: 1.3px;
     border-radius: 15px;
     background-color: #aaa;
     color: var(--PrimaryColor);
