--- a/Star Wars/Page/Estilo.css
+++ b/Star Wars/Page/Estilo.css
@@ -324,15 +324,19 @@ dialog .Sables .Sable img{
     transition: .1s linear;
 }
 dialog .Sables .Sable:nth-child(1) img:hover{
-    box-shadow: 0 0 5px #0ae;
+    box-shadow: 0 0 20px #0ae;
     cursor: pointer;
 }
 dialog .Sables .Sable:nth-child(2) img:hover{
-    box-shadow: 0 0 5px #6e0;
+    box-shadow: 0 0 20px #6e0;
     cursor: pointer;
 }
 dialog .Sables .Sable:nth-child(3) img:hover{
-    box-shadow: 0 0 5px #e30;
+    box-shadow: 0 0 20px #e30;
+    cursor: pointer;
+}
+dialog .Sables .Sable:nth-child(5) img:hover{
+    box-shadow: 0 0 20px var(--SecondaryColor);
     cursor: pointer;
 }
 dialog .Title-Imagen{
